# DocumentComposer

./: .flake8  .gitignore  LICENSE.txt  README.md  config.yml  constants.py  document_composer.spec  logging.yml  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
libs/: composer.py  config.py  constants.py  converter.py  util.py
libs/composable/: base.py  docx.py  txt.py
libs/gui/: constants.py  labeled_check_box.py  labeled_dir_entry.py  labeled_ext_combo_box.py  labeled_file_entry.py  logging_textbox.py  root_screen.py
libs/gui/basic/: dc_button.py  dc_check_box.py  dc_combo_box.py  dc_entry.py  dc_font.py  dc_frame.py  dc_label.py  dc_screen.py  dc_textbox.py  dc_widget.py
resources/: manual.css  manual.html
src/document_composer/: config.py  config.yml  constants.py  logging.yml  main.py  util.py
src/document_composer/api/: composer.py
src/document_composer/gui/: constants.py  labeled_check_box.py  labeled_dir_entry.py  labeled_ext_combo_box.py  labeled_file_entry.py  logging_textbox.py  root_screen.py
src/document_composer/gui/basic/: dc_button.py  dc_check_box.py  dc_combo_box.py  dc_entry.py  dc_font.py  dc_frame.py  dc_label.py  dc_screen.py  dc_textbox.py  dc_widget.py
src/document_composer/models/composable/: base.py  docx.py  txt.py
src/document_composer/resources/: manual.html
