[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-composer"
version = "0.1.0"
description = "DocumentComposer is a Python module that combines multiple document files and outputs them as a single document file."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10.16"
dependencies = [
  "customtkinter==5.2.2",
  "PyYAML==6.0.2",
  "python-docx==1.1.2",
  "pyz==0.4.3",
]

[project.optional-dependencies]
dev = ["flake8-docstrings==1.7.0"]
release = ["pyinstaller==6.14.1", "pip-licenses>=5.5.5", "pipdeptree==2.35.1"]

[project.scripts]
document_composer = "document_composer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
document_composer = [
  "config.yml",
  "logging.yml",
  "resources/*.ico",
  "resources/*.png",
]
